# QlyukerBot

./: .gitignore  Dockerfile  README.md  README_ru.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  run.bat  run.sh
bot/core/: __init__.py  bot.py  consoleInfo.py  headers.py
bot/utils/: __init__.py  getTgWebApp.py  regSession.py
src/: main.py
src/core/: bot.py  config.py
src/utils/: headers.py  tg_session.py
