[project]
name = "qlyuker-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pyrogram (>=2.0.106,<3.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "brotli (>=1.2.0,<2.0.0)",
    "tgcrypto (>=1.2.5,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
